--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,17 @@
   --wGray200: #eee;
 }
 
+.pdf > *::-webkit-scrollbar {
+  width: 6px;
+}
+.pdf > *::-webkit-scrollbar-thumb {
+  background-color: #888888;
+  border-radius: 0.6rem;
+}
+.pdf > *::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
 /* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
@@ -44,5 +55,5 @@ textarea:focus,
 input:focus-visible,
 textarea:focus-visible,
 input:active {
-  outline: solid 1px rgb(142, 67, 217);
+  outline: solid 1px transparent;
 }
